wokring version