@@ -64,12 +64,14 @@ public class VMInstanceUsageParser {
         }
 
         // - query usage_vm_instance table with the following criteria:
-        //     - look for an entry for accountId with start date in the given range
-        //     - look for an entry for accountId with end date in the given range
-        //     - look for an entry for accountId with end date null (currently running vm or owned IP)
-        //     - look for an entry for accountId with start date before given range *and* end date after given range
+        // - look for an entry for accountId with start date in the given range
+        // - look for an entry for accountId with end date in the given range
+        // - look for an entry for accountId with end date null (currently
+        // running vm or owned IP)
+        // - look for an entry for accountId with start date before given range
+        // *and* end date after given range
         List<UsageVMInstanceVO> usageInstances = s_usageInstanceDao.getUsageRecords(account.getId(), startDate, endDate);
-//ToDo: Add domainID for getting usage records
+        // ToDo: Add domainID for getting usage records
 
         // This map has both the running time *and* the usage amount.
         Map<String, Pair<String, Long>> usageVMUptimeMap = new HashMap<String, Pair<String, Long>>();
@@ -99,20 +101,44 @@ public class VMInstanceUsageParser {
                 vmEndDate = endDate;
             }
 
-            // clip the start date to the beginning of our aggregation range if the vm has been running for a while
+            // clip the start date to the beginning of our aggregation range if
+            // the vm has been running for a while
             if (vmStartDate.before(startDate)) {
                 vmStartDate = startDate;
             }
 
-            long currentDuration = (vmEndDate.getTime() - vmStartDate.getTime()) + 1; // make sure this is an inclusive check for milliseconds (i.e. use n - m + 1 to find total number of millis to charge)
+            long currentDuration = (vmEndDate.getTime() - vmStartDate.getTime()) + 1; // make
+            // sure
+            // this
+            // is
+            // an
+            // inclusive
+            // check
+            // for
+            // milliseconds
+            // (i.e.
+            // use
+            // n
+            // -
+            // m
+            // +
+            // 1
+            // to
+            // find
+            // total
+            // number
+            // of
+            // millis
+            // to
+            // charge)
 
             switch (usageType) {
-                case UsageTypes.ALLOCATED_VM:
-                    updateVmUsageData(allocatedVMMap, key, usageInstance.getVmName(), currentDuration);
-                    break;
-                case UsageTypes.RUNNING_VM:
-                    updateVmUsageData(usageVMUptimeMap, key, usageInstance.getVmName(), currentDuration);
-                    break;
+            case UsageTypes.ALLOCATED_VM:
+                updateVmUsageData(allocatedVMMap, key, usageInstance.getVmName(), currentDuration);
+                break;
+            case UsageTypes.RUNNING_VM:
+                updateVmUsageData(usageVMUptimeMap, key, usageInstance.getVmName(), currentDuration);
+                break;
             }
         }
 
@@ -120,11 +146,12 @@ public class VMInstanceUsageParser {
             Pair<String, Long> vmUptimeInfo = usageVMUptimeMap.get(vmIdKey);
             long runningTime = vmUptimeInfo.second().longValue();
 
-            // Only create a usage record if we have a runningTime of bigger than zero.
+            // Only create a usage record if we have a runningTime of bigger
+            // than zero.
             if (runningTime > 0L) {
                 VMInfo info = vmInfosMap.get(vmIdKey);
                 createUsageRecord(UsageTypes.RUNNING_VM, runningTime, startDate, endDate, account, info.getVirtualMachineId(), vmUptimeInfo.first(), info.getZoneId(),
-                    info.getServiceOfferingId(), info.getTemplateId(), info.getHypervisorType(), info.getCpuCores(), info.getCpuSpeed(), info.getMemory());
+                        info.getServiceOfferingId(), info.getTemplateId(), info.getHypervisorType(), info.getCpuCores(), info.getCpuSpeed(), info.getMemory());
             }
         }
 
@@ -132,11 +159,12 @@ public class VMInstanceUsageParser {
             Pair<String, Long> vmAllocInfo = allocatedVMMap.get(vmIdKey);
             long allocatedTime = vmAllocInfo.second().longValue();
 
-            // Only create a usage record if we have a runningTime of bigger than zero.
+            // Only create a usage record if we have a runningTime of bigger
+            // than zero.
             if (allocatedTime > 0L) {
                 VMInfo info = vmInfosMap.get(vmIdKey);
                 createUsageRecord(UsageTypes.ALLOCATED_VM, allocatedTime, startDate, endDate, account, info.getVirtualMachineId(), vmAllocInfo.first(), info.getZoneId(),
-                    info.getServiceOfferingId(), info.getTemplateId(), info.getHypervisorType(), info.getCpuCores(), info.getCpuSpeed(), info.getMemory());
+                        info.getServiceOfferingId(), info.getTemplateId(), info.getHypervisorType(), info.getCpuCores(), info.getCpuSpeed(), info.getMemory());
             }
         }
 
@@ -156,7 +184,7 @@ public class VMInstanceUsageParser {
     }
 
     private static void createUsageRecord(int type, long runningTime, Date startDate, Date endDate, AccountVO account, long vmId, String vmName, long zoneId,
-        long serviceOfferingId, long templateId, String hypervisorType, Long cpuCores, Long cpuSpeed, Long memory) {
+            long serviceOfferingId, long templateId, String hypervisorType, Long cpuCores, Long cpuSpeed, Long memory) {
         // Our smallest increment is hourly for now
         if (s_logger.isDebugEnabled()) {
             s_logger.debug("Total running time " + runningTime + "ms");
@@ -168,8 +196,8 @@ public class VMInstanceUsageParser {
         String usageDisplay = dFormat.format(usage);
 
         if (s_logger.isDebugEnabled()) {
-            s_logger.debug("Creating VM usage record for vm: " + vmName + ", type: " + type + ", usage: " + usageDisplay + ", startDate: " + startDate + ", endDate: " +
-                endDate + ", for account: " + account.getId());
+            s_logger.debug("Creating VM usage record for vm: " + vmName + ", type: " + type + ", usage: " + usageDisplay + ", startDate: " + startDate + ", endDate: " + endDate
+                    + ", for account: " + account.getId());
         }
 
         // Create the usage record
@@ -180,9 +208,9 @@ public class VMInstanceUsageParser {
             usageDesc += " running time";
         }
         usageDesc += " (ServiceOffering: " + serviceOfferingId + ") (Template: " + templateId + ")";
-        UsageVO usageRecord =
-            new UsageVO(Long.valueOf(zoneId), account.getId(), account.getDomainId(), usageDesc, usageDisplay + " Hrs", type, new Double(usage), Long.valueOf(vmId),
-                vmName, cpuCores, cpuSpeed, memory, Long.valueOf(serviceOfferingId), Long.valueOf(templateId), Long.valueOf(vmId), startDate, endDate, hypervisorType);
+        UsageVO usageRecord = new UsageVO(Long.valueOf(zoneId), account.getId(), account.getDomainId(), usageDesc, usageDisplay + " Hrs", type, new Double(usage),
+                Long.valueOf(vmId), vmName, cpuCores, cpuSpeed, memory, Long.valueOf(serviceOfferingId), Long.valueOf(templateId), Long.valueOf(vmId), startDate, endDate,
+                hypervisorType);
         s_usageDao.persist(usageRecord);
     }
 
